変数定義の方法

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,19 @@
 ---
-
+const pageTitle = "ホームページ";
 ---
 
-<html lang="en">
+<html lang="ja">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<h1>私のAstro</h1>
+		<a href="/">ホーム</a>
+    <a href="/about/">概要</a>
+    <a href="/blog/">ブログ</a>
+		<h1>{pageTitle}</h1>
 	</body>
 </html>
