--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -4,5 +4,5 @@
   <a href="/">Home</a>
   <a href="/about/">About</a>
   <a href="/blog/">Blog</a>
-  <a href="/tags/">タグ</a>
-</div >
+  <a href="/tags/">Tags</a>
+</div>
