--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,7 +20,7 @@ h1 {
   font-size: 2.5rem;
 }
 
-/* ナビゲーションのスタイル */
+/* nav styles */
 
 .hamburger {
   padding-right: 20px;
@@ -80,13 +80,13 @@ h1 {
   .hamburger {
     display: none;
   }
+}
 
-  html.dark {
-    background-color: #0d0950;
-    color: #fff;
-  }
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
 
-  .dark .nav-links a {
-    color: #fff;
-  }
+.dark .nav-links a {
+  color: #fff;
 }
